fix: Part fix #264. Trim address. Add CopyButton. Align CopyButton with monospace

--- a/packages/ui-app/src/Params/Params.css
+++ b/packages/ui-app/src/Params/Params.css
@@ -2,6 +2,11 @@
 /* This software may be modified and distributed under the terms
 /* of the ISC license. See the LICENSE file for details. */
 
+.ui--Param-Address {
+  font-family: 'Courier New', Courier, monospace;
+  margin-right: 0.5rem;
+}
+
 .ui--Params-Content {
   box-sizing: border-box;
   padding-left: 2em;
